--- a/elpa/slime/contrib/ChangeLog
+++ b/elpa/slime/contrib/ChangeLog
@@ -1,3 +1,218 @@
+2014-10-10  Luís Oliveira  <loliveira@common-lisp.net>
+
+	* slime-repl.el (sldb-copy-down-to-repl): Use SWANK/BACKEND.
+	(sldb-insert-frame-call-to-repl): Likewise.
+
+2014-10-04  Helmut Eller  <heller@common-lisp.net>
+
+	* slime-autodoc.el (slime-retrieve-arglist): Renamed
+	back from slime-autodoc--retrieve-arglist as it's still
+	used in slime-c-p-c.el
+
+2014-10-01  Helmut Eller  <heller@common-lisp.net>
+
+	Some updates for the MIT-Scheme backend.
+
+	* swank-mit-scheme.scm (accept-connections): Use the built-in
+	open-tcp-server-socket.  In recent releases it seems to set
+	SO_REUSEADDR and lately we used a hardcoded port number even with
+	netcat.
+	(swank:connection-info): Include the :encoding for create-repl.
+	(swank-repl:listener-eval): Renamed from swank:listener-eval.
+	(swank-repl:create-repl): Renamed from swank:create-repl.
+	Return the name of the nearest repl env.
+	(hack-quotes): New helper.
+	(emacs-rex): Use it, as swank-repl:create-repl is called with a
+	keyword argument.
+
+2014-10-01  Helmut Eller  <heller@common-lisp.net>
+
+	Update Kawa backend for separate swank-repl package.
+
+	* swank-kawa.scm (|swank-repl:create-repl|): Renamed from
+	create-repl.
+	(|swank-repl:listener-eval|): Renamed from listener-eval.
+	(defslimefun, %defslimefun, lookup-slimefun): Put "qualified"
+	symbols in *slime-funs*
+
+2014-09-12  Helmut Eller  <heller@common-lisp.net>
+
+	Rewrite slime-autodoc. Fixes github issue#188 along the way.
+
+	Cleaned up and simplified. I think most of functionality was
+	perserved.  There was a "multiline cache" feature which I was not
+	able to understand--despite my best efforts.  So I deleted that.
+
+	* slime-autodoc.el (slime-autodoc): Use helper functions to make
+	this one shorter.  Also remove some of the comments that explained
+	rather obvious things.  Test slime-background-activities-enabled-p
+	before sending something on the wire.
+	(slime-autodoc--parse-context): Mostly replaces the old
+	make-autodoc-rpc-form.
+	(slime-autodoc--parsing-safe-p): New helper.
+	(slime-autodoc--async, slime-autodoc--async%): The asynchronous
+	code without lexical-let.
+
+	(slime-autodoc-manually): Use eldoc-add-command to tell
+	eldoc that it's OK to clobber the echo area.
+	(slime-autodoc-space): New command.  Bound to SPC by the minor
+	mode.  That's simpler than messing around with
+	slime-echo-arglist-function.
+
+	(slime-autodoc-mode): Use define-minor-mode with :keymap keyword
+	to bind keys.  Shorter modeline indicator: "adoc" instead of
+	"Autodoc".
+	(slime-autodoc--doc-map-prefix): New helper.
+
+	(slime-use-autodoc-mode): Deleted. Seems
+	completely redundant now that slime-autodoc is a minor mode that
+	can be turned on/off.
+	(slime-autodoc-use-multiline-p): Deleted. Use
+	eldoc-display-message-no-interference-p instead.
+	(slime-autodoc-delay): Deleted. Use eldoc-idle-delay instead.
+
+	(slime-autodoc--cache-get, slime-autodoc--cache-put):
+	Renamed from slime-get-cached-autodoc and
+	slime-store-into-autodoc-cache.
+	(slime-autodoc--cache-last-context): Renamed from
+	slime-autodoc-last-buffer-form.
+	(slime-autodoc--cache-last-autodoc): Renamed from
+	slime-autodoc-last-autodoc.
+
+	(slime-autodoc-cache-car, slime-autodoc-multiline-cached)
+	(slime-autodoc-cache-multiline): Deleted because I couldn't figure
+	out what the purpose of this "multiline cache" was.
+
+	(slime-autodoc--canonicalize-whitespace): Renamed from
+	slime-canonicalize-whitespace.
+	(slime-autodoc--format): Renamed from slime-format-autodoc.
+	(slime-autodoc--fontify): Renamed from slime-fontify-string.
+
+	(slime-autodoc--on, slime-autodoc--off)
+	(slime-autodoc--enable, slime-autodoc--disable)
+	(slime-autodoc--relevant-hooks):  New.
+
+	(slime-autodoc-maybe-enable): Deleted.
+	(eldoc-display-message-no-interference-p): No advice used any
+	more.
+
+	* test/slime-autodoc-tests.el (autodoc-space): New.
+	(slime-autodoc-to-string): Use new names.
+	(slime-check-autodoc-at-point): Replace cl-getf with plist-get.
+
+2014-09-12  Helmut Eller  <heller@common-lisp.net>
+
+	Fix tests.
+
+	* Makefile (check-fancy): Make explicit target for slime-fancy.
+	Needed because there is no file for it in test/ otherwise.
+	* test/slime-presentations-tests.el (pretty-presentation-results):
+	Specify :right-margin because CCL uses 70 not 75 as default.
+
+2014-09-10  Helmut Eller  <heller@common-lisp.net>
+
+	* swank-repl.lisp: Import *globally-redirect-io* from swank.
+
+2014-09-10  Helmut Eller  <heller@common-lisp.net>
+
+	Make the test filename for presentations match the contrib.
+
+	* test/slime-presentations-tests.el Renamed from
+	slime-presentation-tests.el.
+
+2014-09-10  Helmut Eller  <heller@common-lisp.net>
+
+	Make presentations work, well compile, with swank-repl package.
+
+	* swank-repl.lisp: Export *send-repl-results-function*.
+	* swank-presentations.lisp (init-presentations): Move to function
+	so that *send-repl-results-function* is not clobbered as side
+	effect of compiling swank-presentation-streams.lisp
+	* swank-presentation-streams.lisp (init-presentation-streams):
+	Move to function so that *send-repl-results-function* is not
+	clobbered as side effect of compiling.
+	* slime-presentations.el (slime-presentations-on-connected): New.
+	* slime-presentation-streams.el
+	(slime-presentation-streams-on-connected): New.
+
+2014-09-10  Helmut Eller  <heller@common-lisp.net>
+
+	Only test contribs that actually have tests.
+
+	* Makefile (CONTRIB_TESTS): New variable.
+
+2014-09-10  Helmut Eller  <heller@common-lisp.net>
+
+	* test/slime-parse-tests.el (form-up-to-point.1): Don't
+	hardcode swank::%cursor-marker% use the slime-cursor-marker
+	constant instead.
+
+2014-09-10  Helmut Eller  <heller@common-lisp.net>
+
+	* swank-repl.lisp: Put swank-repl into its own package.
+	* slime-repl.el, test/slime-repl-tests.el: Use swank-repl:
+	instead of swank: where needed.
+
+2014-09-10  Helmut Eller  <heller@common-lisp.net>
+
+	Fix some fallout of the new package structure.
+
+	* swank-presentation-streams.lisp: Use swank-sbcl:: instead of
+	swank-backend::.
+
+2014-09-01  João Távora  <joaotavora@gmail.com>
+
+	* slime-autodoc.el (eldoc-display-message-no-interference-p):
+	Always activate advice.
+
+2014-08-25  João Távora  <joaotavora@gmail.com>
+
+	* test/slime-parse-tests.el (form-up-to-point.1): Remove spurious
+	"e" characters that were apparently the cause of the test failures.
+
+2014-08-23  João Távora  <joaotavora@gmail.com>
+
+	* slime-fuzzy.el (slime-fuzzy-complete-symbol): Use `cl-defun` not `defun*`
+
+2014-08-22  João Távora  <joaotavora@gmail.com>
+
+	* slime-repl.el (slime-repl-input-line-beginning-position): Use
+	`inhibit-field-text-motion'.
+
+2014-08-04  Luís Oliveira  <loliveira@common-lisp.net>
+
+	* slime-c-p-c.el: fix compilation errors due to missing cl-
+	prefixes for some functions/macros.
+
+2014-07-29  Helmut Eller  <heller@common-lisp.net>
+
+	Avoid some compiler warnings.
+
+	* swank-asdf.lisp: Avoid unreachable code for version check.
+	(unique-string-list): Avoid unreachable code warnings.
+
+	* swank-fuzzy.lisp (*all-chunks*): Defvar it and declaim the type
+	to avoid type uncertainty warnings.
+
+	* swank-presentations.lisp (*send-repl-results-function*): Defvar
+	it to avoid unknown var warning.
+
+	* swank-package-fu.lisp (export-structure): Suppress warning about
+	unknown function list-structure-symbols with #+.
+
+2014-07-02  Jan Moringen  <jmoringe@techfak.uni-bielefeld.de>
+
+	Make fancy inspector more robust w.r.t. unexpected logical
+	PATHNAME-HOST
+
+	While CLHS seems to guarantee PATHNAME-HOST to return a string,
+	this is not always the case in practice (e.g. SBCL returns a
+	SB-IMPL:LOGICAL-HOST instance).
+
+	* swank-fancy-inspector.lisp (emacs-inspect logical-pathname):
+	wrap the return value of PATHNAME-HOST in a (:value ...) in case
+	it is not a string
+
 2014-06-28  Helmut Eller  <heller@common-lisp.net>
 
 	Make swank-kawa.scm work with Kawa 1.14.
@@ -247,7 +462,7 @@
 	Closes #9: New output respects existing REPL results or presentations.
 
 	* slime-repl.el (slime-repl-emit-result): After emitting a result,
- 	update `slime-output-end' marker.
+	update `slime-output-end' marker.
 
 	* slime-presentations.el (slime-presentation-write-result): Idem,
 	but for presentation results.
