--- a/elpa/slime/doc/slime.texi
+++ b/elpa/slime/doc/slime.texi
@@ -3,6 +3,8 @@
 @setfilename slime.info
 
 @documentencoding UTF-8
+@codequoteundirected on
+@codequotebacktick on
 
 @dircategory Emacs
 @direntry
@@ -10,8 +12,8 @@
 @end direntry
 @c %**end of header
 
-@set EDITION 2.7
-@set SLIMEVER 2.7
+@set EDITION 2.10.1
+@set SLIMEVER 2.10.1
 @set UPDATED @today{}
 @set TITLE SLIME User Manual
 @settitle @value{TITLE}, version @value{EDITION}
@@ -1195,7 +1197,7 @@ objects.
 
 The inspector can easily be specialized for the objects in your own
 programs. For details see the @code{inspect-for-emacs} generic
-function in @file{swank-backend.lisp}.
+function in @file{swank/backend.lisp}.
 
 @table @kbd
 
@@ -1413,7 +1415,7 @@ Invoke the @code{ABORT} restart.
 @kbditem{q, sldb-quit}
 ``Quit'' -- For @SLIME{} evaluation requests, invoke a restart which
 restores to a known program state. For errors in other threads, see
-@ref{SWANK:*SLDB-QUIT-RESTART*}.
+@ref{*SLDB-QUIT-RESTART*}.
 
 @kbditem{c, sldb-continue}
 Invoke the @code{CONTINUE} restart.
@@ -1858,7 +1860,7 @@ globally set to @code{SWANK:SWANK-DEBUGGER-HOOK} and thus for @SLIME{}
 to handle all debugging in the Lisp image. This is for debugging
 multithreaded and callback-driven applications.
 
-@anchor{SWANK:*SLDB-QUIT-RESTART*}
+@anchor{*SLDB-QUIT-RESTART*}
 @vindex SWANK:*SLDB-QUIT-RESTART*
 @item SWANK:*SLDB-QUIT-RESTART*
 This variable names the restart that is invoked when pressing @kbd{q}
