--- a/elpa/slime/NEWS
+++ b/elpa/slime/NEWS
@@ -1,5 +1,110 @@
 * SLIME News                                -*- mode: outline; coding: utf-8 -*-
 
+* 2.14 (June 2015)
+** Core
+*** Rationals are displayed in the echo area as floats too
+*** Some of SLDB's faces now have MORE COLOR
+*** Clicking with mouse-1 within inspector does things
+As do mouse-6 and mouse-7. (Thanks to Attila Lendvai.)
+
+** slime-c-p-c (Compound Prefix Completion)
+*** Now takes a better guess at symbol case (issue #233)
+
+** slime-fancy
+*** slime-mdot-fu is now enabled by default
+
+** SBCL backend
+*** Now able to jump to ir1-translators, declaims and alien types
+*** Various updates supporting SBCL 1.2.12
+
+** ABCL backend
+*** Fixed inspection of frame-locals in the debugger
+(Thanks to Mark Evenson.)
+
+* 2.13 (March 2015)
+
+** Core
+*** slime-cycle-connections has been deprecated
+It has been replaced by slime-next-connection and
+slime-prev-connection. A shortcut for the latter has been added to
+slime-selector.
+
+** slime-mdot-fu
+The slime-mdot-fu contrib has been brought back to life. (Thanks to Charles
+Zhang. Issues #8, #231 and #232.)
+
+** slime-typeout-frame
+The slime-typeout-frame contrib has been restored. (Issue #221.)
+
+** SBCL backend
+*** Fixed xrefs coming from C-c C-c
+Issue #227.
+
+** CMUCL, SBCL and SCL backends
+*** Better support for custom readtables
+Functionality that depends on SWANK's source-path-parser, such as
+`slime-find-definition', now works properly in face of custom
+readtables by honoring SWANK:*READTABLE-ALIST*. (Thanks to Gábor
+Melis. PR #244.)
+
+** Kawa backend
+*** Updated for Kawa version 2.0
+
+* 2.12 (January 2015)
+
+** Core
+A couple of regressions introduced in version 2.10 were fixed.
+
+*** slime-compile-buffer (C-c C-k) no longer tries to save every buffer
+*** slime-autodoc-mode doesn't spam the minibuffer anymore
+
+** SWANK
+*** CREATE-SERVER provides interactive restarts when port is taken
+Thanks to Adlai Chandrasekhar. (PR #204.)
+
+** slime-fuzzy
+New variable *FUZZY-DUPLICATE-SYMBOL-FILTER* allows customization of
+how symbols accessible from multiple packages should be
+canonicalized. Defaults to :NEAREST-PACKAGE, a departure from the
+previous default behaviour which is still available using
+:HOME-PACKAGE. The new behaviour expands "ui:e-l" to
+"uiop:ensure-list" rather than "uiop/utility:ensure-list". Consult the
+manual for other options and other details.
+
+Thanks to Ivan Shvedunov. (PR #205.)
+
+* 2.11 (December 2014)
+
+** MELPA is now an officially supported installation method
+Various bugs involving installation and upgrading via package.el were
+fixed. See the README for more details. (Issues #125, #195, #208.)
+
+** Core
+*** Compilation via the xref buffer now works again
+
+** slime-repl / slime-presentations
+Only text to the left of the cursor should limit the scope of history
+navigation. Fixed a long-standing bug that violated this when
+slime-presentations was enabled. (Thanks to Ivan Shvedunov. PR #207.)
+
+** slime-package-fu
+Now handles strings as symbol designators, is mindful of trailing
+whitespace and properly handles an :export clause immediately
+following the package name. (Thanks to Leo Liu. PR #145.)
+
+** slime-indentation
+The edge case handling described in slime-cl-indent.el:958 have been
+has been restored.
+
+** Allegro CL backend
+Support for mlisp was restored. It had been broken by the previous
+release. (Reported by Alexandre Rademaker. Issue #209.)
+
+** New experimental SWANK backend for MLWorks
+
+** SWANK
+swank-listener-hooks was restored. (Thanks to Ivan Shvedunov. PR #210.)
+
 * 2.10.1 (October 2014)
 
 *** The SWANK-BACKEND nickname has been added to the SWANK/BACKEND package
