--- a/elpa/slime/contrib/ChangeLog
+++ b/elpa/slime/contrib/ChangeLog
@@ -1,3 +1,199 @@
+2015-06-14  Luís Oliveira  <loliveira@common-lisp.net>
+
+	Fix github issue #249 reported by egarrulo.
+
+	* slime-autodoc.el (slime-fontify-string): Obsolete function
+	alias for slime-autdoc--fontify.
+
+2015-06-13  Luís Oliveira  <loliveira@common-lisp.net>
+
+	Fix github issue #248 reported by egarrulo.
+
+	* slime-asdf.el (slime-find-asd-file): Use cl-return rather than
+	return since, in recent versions of Emacs, the latter does not see
+	the cl-block established by cl-loop.
+
+2015-06-01  Luís Oliveira  <loliveira@common-lisp.net>
+
+	* slime-fancy.el (slime-fancy): Depend on slime-mdot-fu.
+
+2015-05-27  Luís Oliveira  <loliveira@common-lisp.net>
+
+	* swank-c-p-c.lisp (completion-output-case-converter): Take a
+	better guess at symbol case when only a package prefix is
+	provided.
+
+2015-05-03  Luís Oliveira  <loliveira@common-lisp.net>
+
+	* slime-fontifying-fu.el (slime-reader-conditional-face): Remove
+	calls to slime-face-inheritance-possible-p.
+
+	* slime-repl.el (slime-repl-prompt-face, slime-repl-output-face):
+	Ditto.
+
+	* slime-presentations.el (slime-repl-output-mouseover-face): Ditto.
+
+2015-05-01  Stas Boukarev  <stassats@gmail.com>
+
+	* swank-fancy-inspector.lisp (inspect-type-specifier): Adapt for
+	newer SBCL. Patch by Douglas Katzman.
+
+2015-03-04  Luís Oliveira  <loliveira@common-lisp.net>
+
+	* slime-enclosing-context.el (slime-variable-binding-ops-alist):
+	Also look at LET*.
+
+2015-03-01  Charles Zhang  <carolusiacobus@gmail.com>
+
+	* doc/slime.texi: Add documentation for mdot-fu contrib.
+
+2015-02-19  Charles Zhang  <carolusiacobus@gmail.com>
+
+	* slime-enclosing-context.el: Restore some long dead functions in
+	order to make the slime-mdot-fu contrib work again.
+	slime-edit-local-definition and meta-point on local variable and
+	function definitions work as a result.
+
+2015-02-15  Helmut Eller  <heller@common-lisp.net>
+
+	More updates for Kawa backend.
+
+	* swank-kawa.scm: Use define-library to control namespace and
+	enable --r7rs.
+
+2015-02-11  Helmut Eller  <heller@common-lisp.net>
+
+	Update Kawa backend for version 2.0.
+
+	* swank-kawa.scm: Replace @ with \@ as @ is now a reader macro.
+	Also use #:foo instead if foo: as syntax for keywords, in
+	preparation to turn the --r7rs switch on.
+	(<in-port>, <out-port>): New aliases.
+
+2015-01-27  Luís Oliveira  <loliveira@common-lisp.net>
+
+	Make slime-asdf no longer depend on cl which has been deprecated
+	in favor of cl-lib.
+
+	* slime-asdf.el (slime-find-asd-file): Add cl- prefix to loop.
+	(slime-asdf-operation-finished-function): Use slime-curry instead
+	of lexical-let.
+
+2015-01-27  Helmut Eller  <heller@common-lisp.net>
+
+	* swank-mlworks.sml (Rpc.call.getpid): Limit scope.
+
+2015-01-21  Luís Oliveira  <loliveira@common-lisp.net>
+
+	Fix bitrot in slime-typeout-frame.
+
+	* slime-typeout-frame.el (slime-typeout-frame): Use
+	slime-autodoc-mode-hook.
+	(slime-typeout-wrap-autodoc): New function.
+
+2015-01-05  Stas Boukarev  <stassats@gmail.com>
+
+	* swank-arglists.lisp (class-from-class-name-form): ignore all
+	errors from FINALIZE-INHERITANCE, not just PROGRAM-ERROR.
+
+2014-12-24  Stas Boukarev  <stassats@gmail.com>
+
+	* slime-autodoc.el (slime-autodoc-mode): Don't bother with
+	"Slime autodoc mode enabled" unless it's called interactively.
+
+2014-12-23  Stas Boukarev  <stassats@gmail.com>
+
+	* swank-fuzzy.lisp(make-fuzzy-matching): Simplify, no need to
+	define a wrapper function.
+
+2014-12-11  Luís Oliveira  <loliveira@common-lisp.net>
+
+	Fix bug reported by Rodrigo Correia.
+
+	* swank-repl.lisp (package): Import SOCKET-QUEST.
+	(open-dedicated-output-stream): Fix call to SOCKET-QUEST.
+
+2014-12-07  Ivan Shvedunov  <ivan4th@gmail.com>
+
+	Add *FUZZY-DUPLICATE-SYMBOL-FILTER*.
+
+	* swank-fuzzy.lisp: Add *FUZZY-DUPLICATE-SYMBOL-FILTER* variable
+	that controls the removal of symbol name duplicates occurring
+	during fuzzy matching.
+
+2014-12-02  Luís Oliveira  <loliveira@common-lisp.net>
+
+	* swank-presentation-streams.lisp: Don't load sbcl-pprint-patch
+	since it's dangerous and breaks with recent versions of SBCL.
+
+2014-11-30  Luís Oliveira  <loliveira@common-lisp.net>
+
+	* slime-fuzzy.el (slime-when-complete-filename-expand):
+	Tentatively mention `comint-filename-completion'.
+	(slime-fuzzy-complete-symbol): Avoid calling
+	comint-dynamic-complete-as-filename since it's been obsoleted in
+	Emacs 24.1.
+
+2014-11-30  Luís Oliveira  <loliveira@common-lisp.net>
+
+	Restore some of slime-cl-indent's custom indentations.
+
+	* slime-cl-indent.el (common-lisp-indent-function-1): fix
+	reference to undefined variable `containing-sexp'.
+
+2014-11-30  Leo Liu  <sdl.web@gmail.com>
+
+	* slime-package-fu.el (slime-export-symbols): Handle strings.
+	(slime-defpackage-exports): Use `slime-export-symbols' and strip
+	double quotes.
+	(slime-frob-defpackage-form): Don't skip package name in case
+	(:export ...) is immediately following.
+	(slime-determine-symbol-style): Support double quoted styles.
+	(slime-search-exports-in-defpackage): Handle strings.
+	(slime-remove-export): Avoid trailing whitespace.
+	(slime-find-possible-package-file): Use cl-dolist to catch cl-return.
+
+	* slime-fuzzy.el (slime-fuzzy-completions)
+	(slime-fuzzy-complete-symbol)
+	(slime-fuzzy-insert-completion-choice)
+	(slime-fuzzy-fill-completions-buffer)
+	(slime-fuzzy-insert-from-point, slime-fuzzy-select): Use cl-lib.
+
+2014-11-30  Ivan Shvedunov  <ivan4th@gmail.com>
+
+	Revive swank-listener-hooks.
+
+	* swank-listener-hooks.lisp: updated to use repl-related symbols
+	from SWANK-REPL package, export *SLIME-REPL-EVAL-HOOKS*.
+
+2014-11-25  Ivan Shvedunov  <ivan4th@gmail.com>
+
+	Fix history behavior in REPL when using both presentations and
+	paredit.
+
+	* slime-presentations.el: don't ignore until-point-p in
+	slime-presentation-current-input.
+
+2014-11-16  Robert Brown  <robert.brown@gmail.com>
+
+	* slime-fontifying-fu.el: Do not byte compile functions that are
+	already compiled.
+
+2014-11-12  Mark H. David  <mhd@clozure.com>
+
+	Accept (function (function +)) as Lisp printer output for
+	(function #'+).
+
+	* contrib/swank-arglists.lisp: changed function test-print-arglist
+	-- to provide two alternative accepted outputs -- and changed its
+	inner flet function test to accept multiple outputs.
+
+2014-10-24  Helmut Eller  <heller@common-lisp.net>
+
+	Experimental support for MLWorks
+
+	* swank-mlworks.sml: New file.
+
 2014-10-10  Luís Oliveira  <loliveira@common-lisp.net>
 
 	* slime-repl.el (sldb-copy-down-to-repl): Use SWANK/BACKEND.
@@ -267,7 +463,7 @@
 	including use of lookup-and-save-presented-object-or-lose, but also
 	restoring insertion of the presentation into the repl editing stream.
 
-2014-04-17  Olof-Joachim Frahm <olof@macrolet.net>
+2014-04-17  Olof-Joachim Frahm  <olof@macrolet.net>
 
 	* slime-clipboard.el: Require `cl-lib`/`cl` for `lexical-let` and
 	`cl-` prefix.
@@ -420,7 +616,6 @@
 	* bridge.el (bridge-insert-function): new variable to solve
 	redefinition hack in slime-presentations.el
 	(bridge-insert): use it.
-
 
 2014-02-25  João Távora  <joaotavora@gmail.com>
 
@@ -772,19 +967,19 @@
 	* slime-parse.el: require 'slime-tests. Remove trailing
 	whitespace.
 
-2013-12-21 João Távora <joaotavora@gmail.com>
+2013-12-21  João Távora  <joaotavora@gmail.com>
 
 	* slime-presentations.el (slime-M-.-presentation): As in previous
 	patch, must return nil on failure so as not to break the
 	`run-hooks-until-success' logic of `slime-edit-definition-hooks'.
 
-2013-12-21 João Távora <joaotavora@gmail.com>
+2013-12-21  João Távora  <joaotavora@gmail.com>
 
 	* slime-fancy-inspector.el (slime-edit-inspector-part):
 	Since this lives in `slime-edit-definition-hooks', return
 	nil when not in an inspector buffer.
 
-2013-12-21  Samuel Freilich <sfreilich@google.com>
+2013-12-21  Samuel Freilich  <sfreilich@google.com>
 
 	* slime-cl-indent-test.txt: New tests 91-95.
 	* slime-cl-indent.el
@@ -797,7 +992,7 @@
 	(common-lisp-indent-indented-loop-macro-keyword): More subclauses.
 	(common-lisp-indent-loop-macro-1): Use new variables.
 
-2013-11-20  João Távora <joaotavora@gmail.com>
+2013-11-20  João Távora  <joaotavora@gmail.com>
 
 	* swank-trace-dialog.lisp: New file, new :swank-trace-dialog
 	package, uses new wrapping interface in swank-backend.el to trace
@@ -890,7 +1085,7 @@
 	* slime-cl-indent.el (define-common-lisp-style "basic"): Don't set
 	`comment-column' to NIL, it only can accept integers.
 
-2012-12-26  Francois-Rene Rideau <tunes@google.com>
+2012-12-26  Francois-Rene Rideau  <tunes@google.com>
 
 	* swank-asdf.lisp: Better support for different versions of ASDF.
 
@@ -919,7 +1114,7 @@
 	default case when no :export symbols are present.
 	Because of (every anything nil) => T.
 
-2012-11-13  Francois-Rene Rideau <tunes@google.com>
+2012-11-13  Francois-Rene Rideau  <tunes@google.com>
 
 	* swank-asdf.lisp: Better ASDF support.
 
@@ -954,7 +1149,7 @@
 	* swank-fancy-inspector.lisp (emacs-inspect symbol): On SBCL,
 	show information about type specifiers.
 
-2012-04-20  John Smith <ohwoeowho@googlemail.com>
+2012-04-20  John Smith  <ohwoeowho@googlemail.com>
 
 	Prettier arglists.
 
@@ -1843,7 +2038,7 @@
 
 	* slime-repl.el: Handle (:abort condition) message from lisp.
 
-2010-09-18  Tobias C. Rittweiler <tcr@freebits.de>
+2010-09-18  Tobias C. Rittweiler  <tcr@freebits.de>
 
 	* slime-parse.el (slime-parse-form-upto-point): Fix lp#627308.
 
@@ -1853,7 +2048,7 @@
 	(slime-check-autodoc-at-point): Use it.
 	(autodoc.1): Add test case for above fix.
 
-2010-09-18  Tobias C. Rittweiler <tcr@freebits.de>
+2010-09-18  Tobias C. Rittweiler  <tcr@freebits.de>
 
 	* swank-arglist.lisp (function-exists-p): Renamed from
 	FUNCTION-EXISTS-P. Uses new SWANK-BACKEND:VALID-FUNCTION-NAME-P
@@ -1926,7 +2121,7 @@
 
 	* slime-repl.el: Specify :on-unload action.
 
-2010-08-21  Anton Kovalenko <anton@sw4me.com>
+2010-08-21  Anton Kovalenko  <anton@sw4me.com>
 
 	Add support to save snapshots in backround.
 
@@ -2063,12 +2258,12 @@
 
 	* swank-arglists.lisp (decode-arglist): Handle (x . y) macro arglists.
 
-2010-05-14  Tobias C. Rittweiler <tcr@freebits.de>
+2010-05-14  Tobias C. Rittweiler  <tcr@freebits.de>
 
 	* slime-highlight-edits.el, slime-hyperdoc.el, slime-mrepl.el,
           slime-snapshot.el: Fix typo.
 
-2010-05-13  Tobias C. Rittweiler <tcr@freebits.de>
+2010-05-13  Tobias C. Rittweiler  <tcr@freebits.de>
 
 	Perform PATHNAME on file-streams safely.
 
@@ -2078,7 +2273,7 @@
 	(emacs-inspect file-stream): Use them.
 	(emacs-inspect stream-error): Ditto.
 
-2010-05-13  Tobias C. Rittweiler <tcr@freebits.de>
+2010-05-13  Tobias C. Rittweiler  <tcr@freebits.de>
 
 	* slime-autodoc.el, slime-c-p-c.el, slime-compiler-notes-tree.el,
 	slime-enclosing-context.el, slime-fancy.el, slime-fuzzy.el,
@@ -3673,7 +3868,7 @@
 	is in scope of an FLET/LET/etc.
 	([test] enclosing-context.1): Test for this.
 
-2009-01-16   David Reitter <david.reitter@gmail.com>
+2009-01-16   David Reitter  <david.reitter@gmail.com>
 
 	* slime-repl.el (slime-repl-clear-buffer): Call recenter with t as
 	argument (to avoid erasing the entire frame).
@@ -3822,13 +4017,13 @@
 	`(slime-pop-to-location loc 'excursion)' no longer exists; use
 	`(slime-goto-source-location loc)' instead.
 
-2008-11-22  Geoff Wozniak <geoff@wozniak.ca>
+2008-11-22  Geoff Wozniak  <geoff@wozniak.ca>
 
 	* swank-c-p-c.lisp (parse-completion-arguments): Change the
 	package identifier from the string "KEYWORD" to the
 	form (symbol-name :keyword) for ACL's "modern" mode.
 
-2008-10-31  Nikodemus Siivola <nikodemus@random-state.net>
+2008-10-31  Nikodemus Siivola  <nikodemus@random-state.net>
 
 	* swank-presentation-streams.liso (slime-stream-p): delete
 	references to SB-IMPL::INDENTING-STREAM, which is unused in SBCL
@@ -3863,7 +4058,7 @@
 	* swank-kawa.scm (swank-require): Add a dummy definition to avoid
 	errors at startup.
 
-2008-10-11  Nikodemus Siivola <nikodemus@random-state.net>
+2008-10-11  Nikodemus Siivola  <nikodemus@random-state.net>
 
 	* slime-scratch.el (slime-scratch-file): New variable.
 	(slime-scratch-buffer): If *slime-scratch* does not exist and
@@ -3927,7 +4122,7 @@
 	length to one line to avoid (some) problems with big or circular
 	values.  Reported by Stas Boukarev.
 
-2008-08-22  Stelian Ionescu <sionescu@common-lisp.net>
+2008-08-22  Stelian Ionescu  <sionescu@common-lisp.net>
 
 	* swank-listener-hooks.lisp: Add missing IN-PACKAGE.
 
@@ -3980,7 +4175,7 @@
 	(slime-make-typeout-frame): use it
 	(slime-ensure-typeout-frame): ensure typeout buffer is visible
 
-2008-08-04  Adam Bozanich <adam.boz@gmail.com>
+2008-08-04  Adam Bozanich  <adam.boz@gmail.com>
 
 	* slime-asdf.el: Load swank-asdf.
 	This should avoid the rude disconnect if asdf wasn't loaded.
@@ -4025,7 +4220,7 @@
 	(slime-qualify-cl-symbol-name): Moved back to `slime.el' as
 	they're still used there.
 
-2008-04-17  Gábor Melis <mega@retes.hu>
+2008-04-17  Gábor Melis  <mega@retes.hu>
 
 	* swank-fancy-inspector.lisp (inspect-slot-for-emacs):
 	slime-read-object has been gone for a long time, replaced with
@@ -4241,7 +4436,7 @@
 	* swank-goo.goo: New file.
 	* swank-kawa.scm: New file.
 
-2008-01-11  Stelian Ionescu <sionescu@common-lisp.net>
+2008-01-11  Stelian Ionescu  <sionescu@common-lisp.net>
 
 	* slime-presentations.el
 	(slime-copy-or-inspect-presentation-at-mouse): Call
@@ -4469,7 +4664,7 @@
 
 	* slime-autodoc.el (slime-use-autodoc-mode): Change default to t.
 
-2007-09-15  Ariel Badichi <abadichi@bezeqint.net>
+2007-09-15  Ariel Badichi  <abadichi@bezeqint.net>
 
 	* swank-fancy-inspector.lisp (inspect-for-emacs package): When
         inspecting a package, the links in the use list and the used-by
